Fixed theme today logo spacing bug #81054393221397

--- a/assets/css/_theme.scss
+++ b/assets/css/_theme.scss
@@ -691,6 +691,10 @@
 			}
 		}
 	}
+
+	.slim-header .header-top .header-brand {
+		width: 7rem;
+	}
 	
 	.ie-alert,
 	.mobile-nav,
